kubernetes/namespace-pega/pega-db.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pega-db
  namespace: pega
spec:
  replicas: 1
  template:
    metadata:
      namespace: pega
      labels:
        app: pega-db
    spec:
      containers:
        - name: pega-db
          #image: meshbincam.pega.com:7000/postgres-image:1.0.18
          image: prpc-platform/8.4:latest
          imagePullPolicy: "Never"
          ports:
            - containerPort: 5432

---


apiVersion: v1
kind: Service
metadata:
  name: pega-db
  namespace: pega
spec:
  type: NodePort
  ports:
    - nodePort: 30009
      port: 5432
      targetPort: 5432
  selector:
    app: pega-db
  #clusterIP: None
